# ros-package-cpp-starter

./: CMakeLists.txt  README.md  package.xml
config/: image_reader.yaml
include/cpp_ros_package_starter/: counter.hpp
include/image_reader/: reader.hpp
launch/: counter.launch  image_reader.launch
src/: counter.cpp  counter_node.cpp  image_reader_node.cpp  reader.cpp
