<?xml version="1.0"?>
<package format="2">
    <name>image_reader</name>
    <version>0.0.0</version>
    <description>Cpp image reader node for reading in images from folder</description>
    <maintainer email="angus@swarmfarm.com">Angus Ross</maintainer>
    <license>TODO</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>msgs_and_srvs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>msgs_and_srvs</exec_depend>
    <export>
    </export>
</package>